--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "hi",
   "main": "index.js",
   "dependencies": {
-    "mongodb": "^4.4.1"
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.8"
   },
   "devDependencies": {},
   "scripts": {
