--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -15,11 +18,11 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-validation": "^3.0.7",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
-    "react-validation": "^3.0.7",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
