--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
+    "uuid": "^8.3.2",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
