Connect to backend (WIP)

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
-REACT_APP_ENV='dev'
+REACT_APP_ENV='prod'
 REACT_APP_AUTH0_DOMAIN=dev-xgbauyap.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=DqE84bUblFdHo4SsnM8WQJD7EyZkGE6V
+REACT_APP_SERVER_PORT='http://localhost:3003'
