--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.2",
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.4.1",
-    "mongoose": "^6.2.8",
-    "morgan": "^1.10.0"
-  },
-  "scripts": {
-    "test": "test",
-    "start": "node server.js"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"body-parser": "^1.19.2",
+		"cors": "^2.8.5",
+		"express": "^4.17.3",
+		"jsonwebtoken": "^8.5.1",
+		"mongodb": "^4.4.1",
+		"mongoose": "^6.2.8",
+		"morgan": "^1.10.0"
+	},
+	"scripts": {
+		"test": "test",
+		"start": "node server.js",
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+	},
+	"author": "",
+	"license": "ISC"
 }
