--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
 	"scripts": {
 		"test": "test",
 		"start": "node server.js",
-		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+		"heroku-postbuild": "NPM_CONFIG_PRODUCTION=false cd ../client && npm install --prefix && npm run build --prefix ./client"
 	},
 	"author": "",
 	"license": "ISC"
